<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:paddingBottom="10dp"
    android:layout_marginBottom="10dp"
    android:layout_height="match_parent"
    tools:context=".ConnectActivityStep2" >
  
    <LinearLayout
        android:id="@+id/mainConnect"
        android:layout_width="match_parent"
       
        android:layout_height="100dp"
        android:orientation="horizontal" >

		     <ImageView
		       	android:id="@+id/navmenuprofile_photo"
		       	android:layout_width="wrap_content"
		       	android:background="@drawable/person"
		       	android:layout_height="wrap_content"
		       	android:contentDescription="@string/image"
	        />
		
		     <EditText
		          android:id="@+id/tvAbout"
		          android:layout_width="match_parent"
		          android:layout_height="wrap_content"
      		      android:ems="10"
      		      android:lines="3"
		          android:paddingTop="65dp"
		          android:hint="@string/sobre"
	          />
       
		     
    </LinearLayout>
    
    
    <EditText
         android:id="@+id/tvCity"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
      	 android:ems="10"
      	 android:paddingTop="20dp"
      	 android:layout_below="@+id/mainConnect"
         android:hint="@string/city"
      />
    
     <EditText
         android:id="@+id/tvCity2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
      	 android:ems="10"
      	 android:paddingTop="20dp"
      	 android:layout_below="@+id/tvCity"
         android:hint="@string/doc"
      />
      
     
    
     
     
	<Button 
	    android:id="@+id/buttonSaveFoto"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="10dp"
	    android:gravity="bottom"
	    android:layout_below="@+id/tvCity2"
	    android:text="@string/salvarperfil"
	    />

	
</RelativeLayout>